--- a/test.html
+++ b/test.html
@@ -23,14 +23,14 @@ var s=d.createElement('script');
 s.type='text/javascript';
 s.charset='utf-8';
 s.async=true;
-s.src='https://raw.githubusercontent.com/pod-o-mart/keyboardBookmarlets/master/kb.js';
+s.src='https://languagebookmarklet.de/keyboard/kb.js';
 d.body.appendChild(s);
 
 var head=document.head;
 var link=document.createElement('link');
 link.type='text/css';
 link.rel='stylesheet';
-link.href='https://raw.githubusercontent.com/pod-o-mart/keyboardBookmarlets/master/keyboard.css';head.appendChild(link);
+link.href='https://languagebookmarklet.de/keyboard/keyboard.css';head.appendChild(link);
 
 var y = document.getElementsByTagName('TEXTAREA');
 var j;
