--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Virtual keyboard bookmarklet test page</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 
 <body>
@@ -12,7 +13,7 @@
 <input type="email" class="test" value="input type='email'"><br>
 <input type="password" class="test" value="input type='password'"><br>
 <p>Try the virtual keyboard by clicking on one of the following links. In order to use the bookmarklet on other sites, drag one of the links into your browser's bookmarks toolbar or save it as a bookmark.</p>
-<p>Universal <a href="javascript:(
+Universal <a href="javascript:(
 function(d){
 var scriptlang=document.createElement('script');
 scriptlang.type='text/javascript';
@@ -53,50 +54,8 @@ for (l = 0; l < w.length; l++) {
 		}
 	}
 }
-(document));">Keyboard</a></p>
-<p>Universal <a href="javascript:(
-function(d){
-var scriptlang=document.createElement('script');
-scriptlang.type='text/javascript';
-scriptlang.text='var kblang=\'English\'';
-document.getElementsByTagName('head')[0].appendChild(scriptlang);
-
-var s=d.createElement('script');
-s.type='text/javascript';
-s.charset='utf-8';
-s.async=true;
-s.src='https://raw.githubusercontent.com/pod-o-mart/keyboardBookmarlets/master/kb-deadkeys.js';
-d.body.appendChild(s);
-
-var head=document.head;
-var link=document.createElement('link');
-link.type='text/css';
-link.rel='stylesheet';
-link.href='https://raw.githubusercontent.com/pod-o-mart/keyboardBookmarlets/master/keyboard.css';head.appendChild(link);
-
-var y = document.getElementsByTagName('TEXTAREA');
-var j;
-for (j = 0; j < y.length; j++) {
-	y[j].classList.add('keyboardInput');
-	}
-var x = document.querySelectorAll('INPUT');
-var i;
-for (i = 0; i < x.length; i++) {
-	x[i].classList.add('keyboardInput');
-	}
-var w = document.getElementsByTagName('INPUT');
-var l;
-for (l = 0; l < w.length; l++) {
-	if (w[l].getAttribute('type') === 'email'){
-		w[l].setAttribute('type', 'text');
-		}
-	if (w[l].getAttribute('type') === 'search'){
-		w[l].setAttribute('type', 'text');
-		}
-	}
-}
-(document));">Keyboard</a> including Ethiopic keyboards (Amharic, Tigrinya), with dead keys "on" by default</p>
-<p>Slavic Studies <a href="javascript:(
+(document));">Keyboard</a><br /><br />
+Slavic Studies <a href="javascript:(
 function(d){
 var scriptlang=document.createElement('script');
 scriptlang.type='text/javascript';
@@ -107,14 +66,14 @@ var s=d.createElement('script');
 s.type='text/javascript';
 s.charset='utf-8';
 s.async=true;
-s.src='https://raw.githubusercontent.com/pod-o-mart/keyboardBookmarlets/master/kb-slav.js';
+s.src='https://languagebookmarklet.de/keyboard/kb-slav.js';
 d.body.appendChild(s);
 
 var head=document.head;
 var link=document.createElement('link');
 link.type='text/css';
 link.rel='stylesheet';
-link.href='https://raw.githubusercontent.com/pod-o-mart/keyboardBookmarlets/master/keyboard.css';head.appendChild(link);
+link.href='https://languagebookmarklet.de/keyboard/keyboard.css';head.appendChild(link);
 
 var y = document.getElementsByTagName('TEXTAREA');
 var j;
@@ -137,6 +96,7 @@ for (l = 0; l < w.length; l++) {
 		}
 	}
 }
-(document));">Keyboard</a> for Slavic studies (Russian is extended with Old Church Slavonic characters, see Ѣ / ALT)</p>
+(document));">Keyboard</a><br /><br />
+
 </body>
 </html>
