--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <div style="font-family:sans-serif;">
 <h1>Bookmarklets for a multilingual virtual online keyboard</h1>
+  <div style="float:right;margin:5px;border:2px solid black;max-width:33%;">
+<h2 style="text-align:center;margin:3px;">Similar projects</h2>
+<ul style="margin:5px;">
+	<li><a href="https://pod-o-mart.github.io/dictionaryBookmarklets/">Dictionary Bookmarklets</a></li>
+	<li><a href="https://pod-o-mart.github.io/slavonicBookmarklets/">Bookmarklets for Slavonic Studies</a></li>
+	<li><a href="https://pod-o-mart.github.io/yiddishBookmarklets/">Bookmarklet for Yiddish dictionaries, keyboard input and transliteration</a></li>
+</ul>
+</div>
 <p>The bookmarklet displays a virtual keyboard interface in almost any web site. Works on input and textarea fields.</p>
 <div style="display:flex;">
 <div style="white-space: nowrap;">
