--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="favelet, bookmarklet, virtual keyboard, VKI" />
+	<meta name="description" content="The bookmarklet displays a multilingual virtual keyboard interface in almost any web site." />
+	<meta name="author" content="Martin Podolak" />
+	<title>Bookmarklets for a multilingual virtual online keyboard</title>
+</head>
+<body>
 <div style="font-family:sans-serif;">
 <h1>Bookmarklets for a multilingual virtual online keyboard</h1>
   <div style="float:right;margin:5px;border:2px solid black;max-width:33%;">
@@ -44,3 +54,5 @@
 <h2>Credits</h2>
 <p>The bookmarklet is based on the Virtual keyboard interface script by <a target="_blank" href="http://www.greywyvern.com/code/javascript/keyboard">GreyWyvern</a>.</p><br />
 </div>
+</body>
+</html>
