--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
 	<meta name="description" content="The bookmarklet displays a multilingual virtual keyboard interface in almost any web site." />
 	<meta name="author" content="Martin Podolak" />
 	<title>Bookmarklets for a multilingual virtual online keyboard</title>
+<style>
+#forkme_banner {
+display: block;
+position: absolute;
+top: 0;
+right: 10px;
+z-index: 10;
+padding: 10px 50px 10px 10px;
+color: #fff;
+background: url("https://pages-themes.github.io/slate/assets/images/blacktocat.png") #0090ff no-repeat 95% 50%;
+font-weight: 700;
+box-shadow: 0 0 10px rgba(0,0,0,0.5);
+border-bottom-left-radius: 2px;
+border-bottom-right-radius: 2px;
+}
+</style>
 </head>
+	
 <body>
 <div style="font-family:sans-serif;">
+<a id="forkme_banner" href="https://github.com/pod-o-mart/keyboardBookmarklets">View on GitHub</a>
 <h1>Bookmarklets for a multilingual virtual online keyboard</h1>
   <div style="float:right;margin:5px;border:2px solid black;max-width:33%;">
 <h2 style="text-align:center;margin:3px;">Similar projects</h2>
