--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<div class="block  _menu2">
 						<div class="moduletable">           	
 							<div class="module-title">
-								<h3 class="title"><span class="" ></span>Similar projects</h3>
+								<h3 class="title">Similar projects</h3>
 							</div>
 							<div class="module-content">
 								<ul class="nav menu panel-group">
@@ -119,7 +119,7 @@
 <!-- Main content -->				
 
 <div style="font-family:sans-serif;">
-<a id="forkme_banner" href="https://github.com/pod-o-mart/dictionaryBookmarklets">View on GitHub</a>
+<a id="forkme_banner" href="https://github.com/pod-o-mart/keyboardBookmarklets">View on GitHub</a>
 <h1>Bookmarklets for a multilingual virtual online keyboard</h1>
 <p>The bookmarklet displays a virtual keyboard interface in almost any web site. Works on input and textarea fields.</p>
 <div style="display:flex;">
@@ -152,9 +152,8 @@
 <h2>Preferences</h2>
 <p>You can change the keyboard's default language by adjusting <code> kblang=\'English\'';</code> in the the bookmark, e.g. <code> kblang=\'Русский\'';</code></p>
 <h2>Technical information</h2>
-<p style="text-align: justify;">The bookmarklet calls the JavaScript <a style="font-family:monospace;display:inline;" href="https://pod-o-mart.github.io/keyboardBookmarklets/kb.js">kb.js</a>
-<a style="font-family:monospace;display:inline;" href="https://pod-o-mart.github.io/keyboardBookmarklets/kb-slav.js">kb-slav.js</a>
-<a style="font-family:monospace;display:inline;" href="https://pod-o-mart.github.io/keyboardBookmarklets/keyboard-ees.js">keyboard-ees.js</a> and the respective CSS-stylesheet <a style="font-family:monospace;display:inline;" href="https://pod-o-mart.github.io/keyboardBookmarklets/keyboard.css">keyboard.css</a>/<a style="font-family:monospace;display:inline;" href="https://pod-o-mart.github.io/keyboardBookmarklets/kb-slav.css">kb-slav.css</a>/<a style="font-family:monospace;display:inline;" href="https://pod-o-mart.github.io/keyboardBookmarklets/keyboard-ees.css">keyboard-ees.css</a> and applies it to the current web site. Consequently, the bookmarklets will only work with an established internet connection.</p>
+<p style="text-align: justify;">The bookmarklet calls the JavaScript <code><a href="https://pod-o-mart.github.io/keyboardBookmarklets/kb.js">kb.js</a></code>
+ / <code><a href="https://pod-o-mart.github.io/keyboardBookmarklets/kb-slav.js">kb-slav.js</a></code> / <code><a href="https://pod-o-mart.github.io/keyboardBookmarklets/keyboard-ees.js">keyboard-ees.js</a></code> and the respective CSS-stylesheet <code><a href="https://pod-o-mart.github.io/keyboardBookmarklets/keyboard.css">keyboard.css</a></code> / <code><a href="https://pod-o-mart.github.io/keyboardBookmarklets/kb-slav.css">kb-slav.css</a></code> / <code><a href="https://pod-o-mart.github.io/keyboardBookmarklets/keyboard-ees.css">keyboard-ees.css</a></code> and applies it to the current web site. Consequently, the bookmarklets will only work with an established internet connection.</p>
 <p style="text-align: justify;">The bookmarklets may be downloaded from <a target="_blank" href="https://github.com/pod-o-mart/keyboardBookmarklets">GitHub</a>.</p>
 <h2>Credits</h2>
 <p>The bookmarklet is based on the Virtual keyboard interface script by <a target="_blank" href="http://www.greywyvern.com/code/javascript/keyboard">GreyWyvern</a>.</p><br />
